# Py-Samples

Telegram bot/Bot01/: README.txt  Telebot_Ollama.py
Telegram bot/Quivr_Telebot/: README.md  app.py  config.py  pyproject.toml
Telegram bot/Telebot_webhook/: app.py  config.py  pyproject.toml
Telegram bot/Telegrambot_OCR/: README.md  app.py  pyproject.toml
WebAutimation/: ExceltoSite.py  README.txt
todoapp/: README.md  pyproject.toml
todoapp/backend/: db.sqlite3
todoapp/backend/api/: models.py  serializers.py  urls.py  views.py
todoapp/backend/api/migrations/: 0001_initial.py
todoapp/backend/backend/: settings.py  urls.py
todoapp/frontend/src/: App.jsx  api.js
todoapp/frontend/src/components/: Form.jsx  Note.jsx  ProtectedRoute.jsx
todoapp/frontend/src/pages/: home.jsx  notfound.jsx
todoapp/frontend/src/styles/: Home.css
web03/: README.txt
web03/users/: controller.py
