[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Teguh S. <tiofilus86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
asgiref = "^3.8.1"
pyjwt = "^2.8.0"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
